@@ -24,6 +24,8 @@ AC_INIT([GNU Automake], [1.7a], [bug-automake@gnu.org])
 AC_CONFIG_SRCDIR(automake.in)
 AC_CONFIG_AUX_DIR(lib)
 
+AC_CANONICAL_BUILD
+
 # Save the AUTOCONF setting before AM_INIT_AUTOMAKE overrides it;
 # this way we can run Autoconf tests from configure without being
 # bothered by `missing'.
@@ -88,6 +90,17 @@ AC_SUBST([LN], [$am_cv_prog_ln])
 result=no
 test "x$am_cv_prog_ln" = xln && result=yes
 AC_MSG_RESULT([$result])
+
+# The amount we should wait after modifying files depends on the platform.
+# On Windows '95, '98 and ME, files modifications have 2-seconds
+# granularity and can be up to 3 seconds in the future w.r.t. the
+# system clock.  When it is important to ensure one file is older
+# than another we wait at least 5 seconds between creations.
+case $build in
+  *-pc-msdosdjgpp) MODIFICATION_DELAY=5;;
+  *)               MODIFICATION_DELAY=2;;
+esac
+AC_SUBST([MODIFICATION_DELAY])
 
 # Test for things needed by the test suite.
 AC_PROG_EGREP
