@@ -1,3 +1,11 @@
+2003-04-08  Richard Dawe  <rich@phekda.freeserve.co.uk>
+
+	* configure.in: Get the build platform name.  Define
+	MODIFICATION_DELAY as the time to wait after modifying a file,
+	to cope with timestamp granularity issues, depending
+	on the platform.
+	* tests/defs.in: Define `sleep' using MODIFICATION_DELAY.
+
 2003-04-08  Eric Siegerman  <eric_97@pobox.com>  (tiny change)
 
 	* automake.texi (Public macros): Clarify that the new
